Update version and build numbers, adjust file paths, and improve index clamping in OpenCLBlurProcessor